Refactored test for creating a new product.